# OpenVEILSamples

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  LICENSE.md  README.md
Crypto/ECDSA/: CMakeLists.txt  ECDSA_Sample.cpp  README.md  stdafx.h
